# static-drop

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  compose.yml  deploy.sh  package.json  pnpm-lock.yaml  uninstall.sh
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/app/: config.py  db.py  deploy.py  main.py
apps/api/tests/: test_auth.py  test_db.py  test_deploy.py
apps/web/: .dockerignore  Dockerfile  README.md  next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/console-api/[...path]/: route.ts
apps/web/src/app/deployments/: page.tsx
apps/web/src/app/deployments/[id]/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/projects/[id]/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/: CopyButton.tsx  DomainManager.tsx  DropZone.tsx  LanguageProvider.tsx  NavBar.tsx  RollbackButton.tsx
apps/web/src/lib/: api.ts  i18n-server.ts  i18n.ts  server-api.ts
infra/caddy/: Caddyfile
infra/nginx/: Dockerfile  nginx.conf
